--- a/src/styles.css
+++ b/src/styles.css
@@ -32,23 +32,15 @@ h2,
   top: -10px;
   left: 5px;
 }
-h3 {
-  position: absolute;
-  top: 100px;
-  left: 190px;
+ul {
+  list-style: none;
 }
-
 .w1,
 .w2,
 .w3 {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 12px;
   color: rgb(155, 158, 162);
-}
-h4 {
-  position: relative;
-  bottom: 75px;
-  left: 375px;
 }
 .date,
 .time {
