--- a/src/styles.css
+++ b/src/styles.css
@@ -23,6 +23,10 @@ h2,
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
 }
+.display-features {
+  position: relative;
+  right: 65px;
+}
 .maintemp,
 .maintemp2,
 .holder {
