--- a/src/styles.css
+++ b/src/styles.css
@@ -17,6 +17,7 @@ h1,
 .currentloc {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 24px;
+  text-transform: capitalize;
 }
 h2,
 .displaytemp {
