updated main page to now display humidity, wind, and temp description Also add a few new classes to html as well as fixed issue with time

--- a/src/styles.css
+++ b/src/styles.css
@@ -13,6 +13,9 @@
   border-width: 1px;
   font-size: 18px;
 }
+#display-description {
+  text-transform: capitalize;
+}
 h1,
 .currentloc {
   font-family: Arial, Helvetica, sans-serif;
