--- a/src/styles.css
+++ b/src/styles.css
@@ -73,3 +73,11 @@ ul {
 .hosted {
   text-align: center;
 }
+
+.weather-temp .active {
+  color: black;
+  cursor: default;
+}
+.weather-temp .active:hover {
+  text-decoration: none;
+}
