--- a/src/styles.css
+++ b/src/styles.css
@@ -72,8 +72,8 @@ ul {
 }
 .hosted {
   text-align: center;
+  font-family: "Courier New", Courier, monospace;
 }
-
 .weather-temp .active {
   color: black;
   cursor: default;
